# market_data_exploration

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
market_analysis/: __init__.py  dataset.py  features.py  plots.py
market_analysis/modeling/: predict.py  train.py
notebooks/: 1_load_market_data.ipynb  2_volatility_indicators.ipynb  4_refined_technical_indicators.ipynb  5_basic_ML.ipynb  5_time_series_CNN.ipynb  6_simple_trading_strategy.ipynb
